added <span> tag to hide extra caption on the button (mobile version)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="container-button">
                     <div class="button button-main">CALCULATE THE COST</div>
-                    <div class="button button-main button-transparent">SUBMIT YOUR APPLICATION</div>
+                    <div class="button button-main button-transparent"><span>SUBMIT YOUR </span>APPLICATION</div>
                 </div>
             </div>
             <div class="hero-overlay"></div>
