step2 with errors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container header-content">
             <div class="logo">IC "Repair Design Project"</div>
             <nav>
-                <ul class="header-navigation">
+                <ul class="navigation header-navigation">
                     <li class="header-navigation__item"><a href="#">HOME</a></li>
                     <li class="header-navigation__item"><a href="#">PROJECTS</a></li>
                     <li class="header-navigation__item"><a href="#">MEASUREMENT</a></li>
@@ -28,22 +28,72 @@
     </header>
     <main class="main">
         <section class="hero">
-            <div class="container hero-container">
-                <h1 class="title main-title">
-                    Turnkey Repair in the <br>      
-                    city of <span>Rostov-on-Don</span>
+            <div class="container hero-content">
+                <h1 class="title hero__title">
+                    Turnkey Repair in the city of <span>Rostov-on-Don</span>
                 </h1>
-                <div class="main-text">
-                    Get ready-made turnkey repairs on time       
+                <div class="hero__text">
+                    Get ready-made turnkey repairs on time<br>       
                     with work time saving up to 45 days and 20% from
                     cost of materials due to the organization of work
                 </div>
-                <div class="container-button">
+                <div class="hero__buttons">
                     <div class="button button-main">CALCULATE THE COST</div>
                     <div class="button button-main button-transparent"><span>SUBMIT YOUR </span>APPLICATION</div>
                 </div>
             </div>
             <div class="hero-overlay"></div>
+        </section>
+        <section class="completed">
+            <div class="container completed-content">
+                <ul  class="navigation completed-navigation">
+                    <li class="completed-navigation__item active"">Rostov-on-Don, Admiral</li>
+                    <li class="completed-navigation__item">Sochi Thieves</li>
+                    <li class="completed-navigation__item">Rostov-on-Don Patriotic</li>
+                </ul>
+                <div class="completed__main-block">
+                    <div class="completed__text">
+                        <div class="completed__text__descr">
+                            <h2 class="completed__text__descr__title title">Completed projects</h2>
+                            <div class="completed__text__descr_p">Only a small part of the work performed by our company is presented on the site. 
+                                For 14 years on in the construction 
+                                market we have made happy more than 1000 families
+                            </div>
+                        </div>
+                        <div class="completed-flex-container row1">
+                            <div class="completed-flex-item column1">
+                                <h3>City:</h3>
+                                <div>Rostov-on-Don
+                                LCD admiral</div>
+                            </div> 
+                            <div class="completed-flex-item column2">
+                                <h3>apartment area:</h3>
+                                <div>81 m2</div>
+                            </div> 
+                        </div>
+                        <div class="completed-flex-container row2">
+                            <div class="completed-flex-item column1">
+                                <h3>Repair time:</h3>
+                                <div>3.5 months</div>
+                            </div> 
+                            <div class="completed-flex-item column2">
+                                <h3>Repair Cost:</h3>
+                                <div>Upon request</div>
+                            </div> 
+                        </div>
+                        <div class="completed__text__arrow">
+                            <img src="./images//icons/left.svg" alt="arrow on the left">
+                            <img src="./images/icons/Rectangle.svg" alt="dot">
+                            <img src="./images/icons/Rectangle.svg" alt="dot">
+                            <img src="./images/icons/Rectangle.svg" alt="dot">
+                            <img src="./images/icons/right.svg" alt="arrow on the right">
+                        </div> 
+                    </div>
+                    <div class="completed-image">
+                    <img src="./images/image-completed.png" alt="Foto of flat">
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="footer"></footer>
