--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                             </div> 
                         </div>
                         <div class="completed__text__arrow">
-                            <img src="./images//icons/left.svg" alt="arrow on the left">
-                            <img src="./images/icons/Rectangle.svg" alt="dot">
-                            <img src="./images/icons/Rectangle.svg" alt="dot">
-                            <img src="./images/icons/Rectangle.svg" alt="dot">
-                            <img src="./images/icons/right.svg" alt="arrow on the right">
+                            <img src="./images//icons/left.svg" alt="arrow on the left" class="arrow-left">
+                            <img src="./images/icons/dot.svg" alt="dot" class="dot1 active">
+                            <img src="./images/icons/dot.svg" alt="dot" class="dot2">
+                            <img src="./images/icons/dot.svg" alt="dot" class="dot3">
+                            <img src="./images/icons/right.svg" alt="arrow on the right" class="arrow-right">
                         </div> 
                     </div>
                     <div class="completed-image">
