before install npm normalize.css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li class="header-navigation__item"><a href="#">CONTACTS</a></li>
                 </ul>
             </nav>
-            <a href="tel:+7 (928) 768-32-39" class="phone">+7 (928) 768-32-39</a>
+            <a href="tel:+79287683239" class="phone">+7 (928) 768-32-39</a>
             <button class="button button-header">Request a call</button>
         </div>
     </header>
@@ -90,12 +90,117 @@
                         </div> 
                     </div>
                     <div class="completed-image">
-                    <img src="./images/image-completed.png" alt="Foto of flat">
+                        <img src="./images/image-completed.png" alt="Foto of flat">
                     </div>
                 </div>
             </div>
         </section>
+        <section class="control">
+            <div class="subtitle">
+                <h3 class="title subtitle__text">
+                    online control
+                </h3>
+                <div class="subtitle__flex-container">
+                    <img src="./images/icons/line.svg" alt="line">
+                    <img src="./images/icons/camera.svg" alt="camera" class="centerElem">
+                    <img src="./images/icons/line.svg" alt="line">
+                </div>
+            </div>
+            <div class="control__image">
+                <img src="./images/icons/video.svg" alt="buttle video">
+            </div>
+            <div class="control-text">
+                <div><img src="./images/icons/Rectangle-line.svg" alt="line">
+                </div>
+                <div>
+                    At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast from one of our facilities!
+                    Leave a request below and you will receive a link to the broadcast.s 
+                </div>
+                <div class="control__input">
+                    <form action="#" method="post">
+                        <label for="name">Name</label>
+                        <input type="text" name="name" placeholder="What is your name:">
+                        <label for="phone">Phone</label>
+                        <input type="tel" name="phone" placeholder="Your phone number:">
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+                <div class="control__checkbox">
+                    <label class="label">
+                        <input type="checkbox" class="checkbox">
+                        <span class="fake"></span>
+                        <span class="text">I agree to the processing of personal data</span>
+                    </label>
+                </div>
+            </div>
+        </section>
+        <section class="types">
+            <div class="subtitle">
+                <h3 class="title subtitle__text subtitle__text-color">
+                    TYPES OF REPAIR
+                </h3>
+                <div class="subtitle__flex-container">
+                    <img src="./images/icons/line.svg" alt="line">
+                    <img src="./images/icons/tools.svg" alt="tools" class="tools">
+                    <img src="./images/icons/line.svg" alt="line">
+                </div>
+            </div>
+            <div class="types__row">
+                <div class="types__row__item">
+                    <div class="types__image">
+                        <img src="./images/Redecorating.jpg" alt="Redecorating">
+                    </div>
+                    <div class="types__row__item__text">
+                        <h4 class="title types__subtitle">Redecorating</h4>
+                        <ul>
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering</li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                        <div class="price title">from 900 rub / m2</div>
+                    </div>
+                </div>
+                <div class="types__row__item">
+                    <div class="types__image">
+                        <img src="./images/Overhaul.jpg" alt="Overhaul">
+                    </div>
+                    <div class="types__row__item__text">
+                        <h4 class="title types__subtitle">Overhaul</h4>
+                        <div class="list">
+                            <img src="./images/icons/list.svg" alt="list">
+                        </div>
+                        <div class="price title">from 1800 rub / m2</div>
+                    </div>
+                </div>
+                <div class="types__row__item">
+                    <div class="types__image">
+                        <img src="./images/Designer.jpg" alt="Designer Repair">
+                    </div>
+                </div>
+                
+            </div>
+        </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="container footer-content">
+            <div class="logo">IC "Repair Design Project"</div>
+            <nav>
+                <ul class="navigation footer-navigation">
+                    <li class="footer-navigation__item"><a href="#">HOME</a></li>
+                    <li class="footer-navigation__item"><a href="#">PROJECTS</a></li>
+                    <li class="footer-navigation__item"><a href="#">MEASUREMENT</a></li>
+                    <li class="footer-navigation__item"><a href="#">TEAM</a></li>
+                    <li class="footer-navigation__item"><a href="#">REVIEWS</a></li>
+                    <li class="footer-navigation__item"><a href="#">CONTACTS</a></li>
+                </ul>
+            </nav>
+            <a href="tel:+7 (928) 768-32-39" class="phone">+7 (928) 768-32-39</a>
+            <button class="button button-footer">Request a call</button>
+        </div>
+    </footer>
 </body>
-</html>
+</html> 
