--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" media="screen and (max-width: 1299px)" href="./styles/mobile.css">
+    <link rel="stylesheet" media="screen and (min-width: 2500px)" href="./styles/large.css">
     <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap" rel="stylesheet">
     <title>Landing</title>
@@ -181,8 +182,11 @@
                         <div class="price title">from 900 rub / m2</div>
                     </div>
                     <div class="types__row__item">
-                        <div class="types__image">
+                        <div class="types__image desktop">
                             <img src="./images/Overhaul.jpg" alt="Overhaul">
+                        </div>
+                        <div class="types__image mobile">
+                            <img src="./images/overhaul-mobile.jpg" alt="Overhaul">
                         </div>
                         <div class="types__row__item__text">
                             <h4 class="title types__row__item-subtitle">Overhaul</h4>
@@ -444,6 +448,7 @@
             <div class="contacts__map">
                 <img src="./images/map_withoutShadow.jpg" alt="map">
             </div>
+            <div class="overlay contacts-overlay"></div>
         </section>
     </main>
     <footer class="footer">
